--- a/WebApp/booking-yacht/apps/booking-yacht/src/app/pages/tours/tours.component.scss
+++ b/WebApp/booking-yacht/apps/booking-yacht/src/app/pages/tours/tours.component.scss
@@ -1,7 +1,7 @@
 .admin-tour {
   .tour-image {
-    width: 30rem;
-    height: 15rem;
+    width: 100%;
+    height: 18rem;
     margin-top: 1rem;
     border-radius: 10px;
   }
