--- a/WebApp/booking-yacht/apps/booking-yacht/src/app/shared/vehicle/vehicle.component.html
+++ b/WebApp/booking-yacht/apps/booking-yacht/src/app/shared/vehicle/vehicle.component.html
@@ -43,3 +43,9 @@
     </div>
   </div>
 </div>
+<p-paginator
+  [rows]="5"
+  [totalRecords]="120"
+  [rowsPerPageOptions]="[5, 10, 30]"
+  (onPageChange)="paginate($event)"
+></p-paginator>
