--- a/WebApp/booking-yacht/apps/booking-yacht/src/app/shared/vehicle/vehicle.component.html
+++ b/WebApp/booking-yacht/apps/booking-yacht/src/app/shared/vehicle/vehicle.component.html
@@ -15,7 +15,7 @@
         <div class="col-8">
           <div class="grid pt-2">
             <div class="col-12">
-              <h3>{{ vehicle.name }}</h3>
+              <h3>{{ vehicle.name | uppercase }}</h3>
               <div class="heading4">
                 Loại tàu:
                 <span>{{ vehicle.idVehicleTypeNavigation.name }}</span>
