--- a/WebApp/booking-yacht/apps/booking-yacht/src/app/components/ticket-type-form/ticket-type-form.component.html
+++ b/WebApp/booking-yacht/apps/booking-yacht/src/app/components/ticket-type-form/ticket-type-form.component.html
@@ -144,7 +144,7 @@
 
             <div class="col-6">
               <p-card>
-                <p-skeleton width="29rem" height="20rem"></p-skeleton>
+                <p-skeleton width="100%" height="20rem"></p-skeleton>
               </p-card>
             </div>
           </div>
