--- a/WebApp/booking-yacht/apps/booking-yacht/src/app/components/ticket-form/ticket-form.component.html
+++ b/WebApp/booking-yacht/apps/booking-yacht/src/app/components/ticket-form/ticket-form.component.html
@@ -107,7 +107,7 @@
           <div class="p-fluid formgrid grid">
             <div class="col-6 p-shadow-14">
               <p-card subheader="Thông tin vé tàu">
-                <p-skeleton width="29rem" height="17rem"></p-skeleton>
+                <p-skeleton width="100%" height="17rem"></p-skeleton>
               </p-card>
             </div>
             <div class="col-6">
