--- a/WebApp/booking-yacht/apps/booking-yacht/src/app/shared/vehicle/vehicle.component.html
+++ b/WebApp/booking-yacht/apps/booking-yacht/src/app/shared/vehicle/vehicle.component.html
@@ -2,7 +2,7 @@
   class="card box shadow-1 mt-4"
   *ngFor="let vehicle of bussinessVehicleChild"
 >
-  <div class="grid">
+  <div class="grid" *ngIf="!loading">
     <div class="col-9">
       <div class="grid">
         <div class="col-4">
@@ -38,6 +38,51 @@
             [severity]="vehicleStatus[vehicle.status].color"
             [value]="vehicleStatus[vehicle.status].lable"
           ></p-tag>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="grid" *ngIf="loading">
+    <div class="col-9">
+      <div class="grid">
+        <div class="col-4">
+          <p-skeleton width="100%" height="150px"></p-skeleton>
+        </div>
+        <div class="col-8">
+          <div class="grid pt-2">
+            <div class="col-12">
+              <p-skeleton width="30%" height="1rem"></p-skeleton>
+              <div class="heading4">
+                <p-skeleton
+                  width="30%"
+                  height="1rem"
+                  styleClass="mt-4"
+                ></p-skeleton>
+              </div>
+              <div class="heading4">
+                <p-skeleton
+                  width="30%"
+                  height="1rem"
+                  styleClass="mt-1"
+                ></p-skeleton>
+              </div>
+              <div class="heading4">
+                <p-skeleton
+                  width="30%"
+                  height="1rem"
+                  styleClass="mt-1"
+                ></p-skeleton>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-3">
+      <div class="flex">
+        <div class="absolute right-5 top-0">
+          <p-skeleton width="20%" height="1rem"></p-skeleton>
         </div>
       </div>
     </div>
