fix horizontal doashboard

--- a/WebApp/booking-yacht/apps/booking-yacht/src/app/pages/doashboard/doashboard.component.html
+++ b/WebApp/booking-yacht/apps/booking-yacht/src/app/pages/doashboard/doashboard.component.html
@@ -1,6 +1,6 @@
 <div class="admin-doashboard">
   <div class="grid mt-2 ml-1">
-    <div class="col-3">
+    <div class="col">
       <div
         class="card box card-color shadow-1 h-8rem p-4"
         (click)="activeCard(1)"
