--- a/WebApp/booking-yacht/apps/booking-yacht/src/app/pages/doashboard/doashboard.component.html
+++ b/WebApp/booking-yacht/apps/booking-yacht/src/app/pages/doashboard/doashboard.component.html
@@ -46,7 +46,6 @@
           [value]="order"
           [rows]="10"
           [showCurrentPageReport]="true"
-          [rowsPerPageOptions]="[5, 10, 20]"
           [paginator]="true"
           [filterDelay]="0"
           [globalFilterFields]="['agencyName', 'status']"
@@ -93,16 +92,13 @@
         </p-table>
       </div>
     </div>
-    <div class="col-4">
-      <div class="card p-3">
+    <div class="col-4 mt-3">
+      <div class="card pt-3 pl-3">
         <h1>Khách hàng dùng nhiều</h1>
         <p-table
           #dt
-          [value]="order"
-          [rows]="10"
+          [value]="customter"
           [showCurrentPageReport]="true"
-          [rowsPerPageOptions]="[5, 10, 20]"
-          [paginator]="true"
           [filterDelay]="0"
           [globalFilterFields]="['agencyName', 'status']"
           styleClass="p-datatable"
@@ -112,28 +108,25 @@
             <tr>
               <th class="hidden">ID</th>
               <th pSortableColumn="agencyName">
-                Tên khách hàng <p-sortIcon field="agencyName"></p-sortIcon>
+                Khách hàng <p-sortIcon field="agencyName"></p-sortIcon>
               </th>
-              <th>Điện thoại</th>
               <th pSortableColumn="dateOrder">
                 Ngày đặt <p-sortIcon field="dateOrder"></p-sortIcon>
               </th>
             </tr>
           </ng-template>
 
-          <ng-template pTemplate="body" let-order>
+          <ng-template pTemplate="body" let-customter>
             <tr *ngIf="loading">
               <td><p-skeleton></p-skeleton></td>
               <td><p-skeleton></p-skeleton></td>
               <td><p-skeleton></p-skeleton></td>
             </tr>
             <tr *ngIf="!loading">
-              <td class="hidden">{{ order.id }}</td>
-              <td>{{ order.idAgencyNavigation.name }}</td>
-              <td>
-                {{ order.idAgencyNavigation.phoneNumber }}
-              </td>
-              <td>{{ order.dateOrder | date }}</td>
+              <td class="hidden">{{ customter.id }}</td>
+              <td>{{ customter.idAgencyNavigation.name }}</td>
+
+              <td>{{ customter.dateOrder | date }}</td>
             </tr>
           </ng-template>
         </p-table>
