--- a/WebApp/booking-yacht/apps/booking-yacht/src/app/pages/doashboard/doashboard.component.scss
+++ b/WebApp/booking-yacht/apps/booking-yacht/src/app/pages/doashboard/doashboard.component.scss
@@ -2,7 +2,7 @@
   width: 100%;
   overflow-x: hidden;
   .card-color {
-    background: var(--cyan-200);
+    background: white;
   }
   h2 {
     color: var(--dark);
