--- a/WebApp/booking-yacht/apps/booking-yacht/src/app/components/tour-form/tour-form.component.html
+++ b/WebApp/booking-yacht/apps/booking-yacht/src/app/components/tour-form/tour-form.component.html
@@ -88,6 +88,7 @@
                   [(ngModel)]="selectedDes"
                   defaultLabel="Chọn chặn đi"
                   optionLabel="name"
+                  (onChange)="onChange()"
                 ></p-multiSelect>
               </div>
               <div class="col-1">
