done fix Danh sach ve in order

--- a/WebApp/booking-yacht/apps/booking-yacht/src/app/components/ticket-form/ticket-form.component.html
+++ b/WebApp/booking-yacht/apps/booking-yacht/src/app/components/ticket-form/ticket-form.component.html
@@ -40,6 +40,13 @@
                         }}
                       </p>
                     </div>
+                    <div class="col-12">
+                      Trạng thái:
+                      <p-tag
+                        [severity]="ticketsStatus[tickets.status]?.color"
+                        [value]="ticketsStatus[tickets.status]?.lable"
+                      ></p-tag>
+                    </div>
                   </div>
                   <div class="col-6">
                     <div class="col-12">
