--- a/WebApp/booking-yacht/apps/booking-yacht/src/app/components/sidebar/sidebar.component.html
+++ b/WebApp/booking-yacht/apps/booking-yacht/src/app/components/sidebar/sidebar.component.html
@@ -71,7 +71,7 @@
                   routerLinkActive="active"
                   class="nav-link"
                   routerLink="/apartments"
-                  ><i class="ni ni-planet text-blue"></i> Bến tàu</a
+                  ><i class="ni ni-planet text-blue"></i>Loại bến tàu</a
                 >
               </li>
               <li class="nav-item">
