--- a/WebApp/booking-yacht/apps/booking-yacht/src/app/pages/tours/tours.component.html
+++ b/WebApp/booking-yacht/apps/booking-yacht/src/app/pages/tours/tours.component.html
@@ -115,7 +115,7 @@
           *ngIf="!loading"
         >
           <div
-            [style]="{ width: '100%', height: '80vh' }"
+            [style]="{ width: '100%', height: 'auto' }"
             styleClass="p-card-shadow"
             class="card box shadow-1"
           >
@@ -123,7 +123,12 @@
               <h2 class="pl-3 pt-3">
                 {{ tours.tittle | uppercase }}
               </h2>
-              <div>
+              <div
+                class="mt-3"
+                [style]="{
+                  width: '18%'
+                }"
+              >
                 <p-tag
                   [severity]="tourStatus[tours.status]?.color"
                   [value]="tourStatus[tours.status]?.lable"
@@ -141,7 +146,7 @@
             <div class="pl-3 pr-3">
               <span [innerHTML]="tours.descriptions"></span>
             </div>
-            <div class="flex flex-wrap">
+            <div class="flex flex-wrap mt-4">
               <div class="absolute right-4 bottom-4">
                 <button
                   pButton
