--- a/WebApp/booking-yacht/apps/booking-yacht/src/app/components/tour-form/tour-form.component.html
+++ b/WebApp/booking-yacht/apps/booking-yacht/src/app/components/tour-form/tour-form.component.html
@@ -28,7 +28,7 @@
       <div class="col-12">
         <form [formGroup]="form">
           <div class="p-fluid formgrid grid">
-            <div class="p-field col-12">
+            <div [class]="editMode ? 'p-field col-8' : 'p-field col-12'">
               <label for="tittle">Tiêu đề</label>
 
               <input
@@ -55,6 +55,7 @@
                 >Trạng Thái không được rỗng</small
               >
             </div>
+
             <div class="p-field col-7 mt-3">
               <label for="status">Mô tả</label>
               <p-editor
