--- a/WebApp/booking-yacht/apps/booking-yacht/src/app/components/ticket-type-form/ticket-type-form.component.html
+++ b/WebApp/booking-yacht/apps/booking-yacht/src/app/components/ticket-type-form/ticket-type-form.component.html
@@ -96,8 +96,8 @@
                     <div class="col-12">
                       Trạng thái:
                       <p-tag
-                        [severity]="tourStatus[tour.status!].color"
-                        [value]="tourStatus[tour.status!].lable"
+                        [severity]="tourStatus[tour.status!]?.color"
+                        [value]="tourStatus[tour.status!]?.lable"
                       ></p-tag>
                     </div>
                   </div>
