--- a/WebApp/booking-yacht/apps/booking-yacht/src/app/pages/tours/tours.component.html
+++ b/WebApp/booking-yacht/apps/booking-yacht/src/app/pages/tours/tours.component.html
@@ -135,16 +135,16 @@
                 ></p-tag>
               </div>
             </div>
-            <div class="pl-3 pr-3">
+            <div class="pl-3 pr-3" style="height: 18rem">
               <img
                 alt="Card"
                 class="tour-image"
-                src="../../../assets/img/tours/background.jpg"
+                [src]="tours.imageLink ? tours.imageLink : imageNotFound"
               />
             </div>
-            <p-divider type="dashed"></p-divider>
+            <p-divider type="dashed" class="mt-3"></p-divider>
             <div class="pl-3 pr-3">
-              <span [innerHTML]="tours.descriptions"></span>
+              <span [innerHTML]="tours?.descriptions"></span>
             </div>
             <div style="height: 40px"></div>
             <div class="flex flex-wrap mt-4">
