fix update tickettype

--- a/WebApp/booking-yacht/apps/booking-yacht/src/app/components/ticket-type-form/ticket-type-form.component.html
+++ b/WebApp/booking-yacht/apps/booking-yacht/src/app/components/ticket-type-form/ticket-type-form.component.html
@@ -45,7 +45,7 @@
                       <p>{{ tour?.tittle }}</p>
                     </div>
                     <div class="col-12">
-                      Trạng thái:
+                      Trạng thái tour:
                       <p-tag
                         [severity]="tourStatus[tour.status!]?.color"
                         [value]="tourStatus[tour.status!]?.lable"
