--- a/WebApp/booking-yacht/apps/booking-yacht/src/app/components/sidebar/sidebar.component.html
+++ b/WebApp/booking-yacht/apps/booking-yacht/src/app/components/sidebar/sidebar.component.html
@@ -36,6 +36,11 @@
             {{ menuItem.title }}
           </a>
         </li>
+        <li class="nav-item">
+          <a routerLinkActive="active" routerLink="/payment" class="nav-link">
+            <i class="fab fa-cc-amazon-pay text-info"></i>Thanh toán
+          </a>
+        </li>
 
         <ul class="navbar-nav pl-4 setting-nav">
           <li class="nav-item">
@@ -55,7 +60,7 @@
                   routerLinkActive="active"
                   class="nav-link"
                   routerLink="/tours"
-                  ><i class="ni ni-send text-yellow"></i> Chuyến đi</a
+                  ><i class="ni ni-send text-yellow"></i>Tours</a
                 >
               </li>
               <li class="nav-item">
