fix name status

--- a/WebApp/booking-yacht/apps/booking-yacht/src/app/pages/doashboard/doashboard.component.html
+++ b/WebApp/booking-yacht/apps/booking-yacht/src/app/pages/doashboard/doashboard.component.html
@@ -129,6 +129,7 @@
               <td><p-skeleton></p-skeleton></td>
               <td><p-skeleton></p-skeleton></td>
               <td><p-skeleton></p-skeleton></td>
+              <td><p-skeleton></p-skeleton></td>
             </tr>
             <tr *ngIf="!loading">
               <td class="hidden">{{ order.id }}</td>
