--- a/WebApp/booking-yacht/apps/booking-yacht/src/app/pages/home-pages/home-pages.component.html
+++ b/WebApp/booking-yacht/apps/booking-yacht/src/app/pages/home-pages/home-pages.component.html
@@ -124,6 +124,7 @@
                   icon="pi pi-ban"
                   class="p-button-rounded p-button-warning"
                   (click)="deleteBusiness(businessAcount.id)"
+                  *ngIf="businessAcount.status !== 2"
                 ></button>
               </td>
             </tr>
